--- a/src/app/friends/friends.component.html
+++ b/src/app/friends/friends.component.html
@@ -10,26 +10,29 @@
             <hr>
             <form>
               <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-2 col-form-label">Nama</label>
+                <label for="inputNama" class="col-sm-2 col-form-label">Nama</label>
                 <div class="col-sm-10">
-                  <input type="email" class="form-control" id="inputEmail3" placeholder="Masukkan nama..">
+                  <input type="text" class="form-control" (input)="nama=$event.target.value"
+                    placeholder="Masukkan nama..">
                 </div>
               </div>
               <div class="form-group row">
-                <label for="inputPassword3" class="col-sm-2 col-form-label">Email</label>
+                <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-sm-10">
-                  <input type="password" class="form-control" id="inputPassword3" placeholder="Masukkan email..">
+                  <input type="email" class="form-control" (input)="email=$event.target.value"
+                    placeholder="Masukkan email..">
                 </div>
               </div>
               <div class="form-group row">
-                <label for="inputPassword3" class="col-sm-2 col-form-label">Nomor Kontak</label>
+                <label for="inputKontak" class="col-sm-2 col-form-label">Nomor Kontak</label>
                 <div class="col-sm-10">
-                  <input type="password" class="form-control" id="inputPassword3" placeholder="Masukkan kontak..">
+                  <input type="number" class="form-control" (input)="contact=$event.target.value"
+                    placeholder="Masukkan kontak..">
                 </div>
               </div>
               <div class="form-group row">
                 <div class="col-sm-12">
-                  <button type="submit" class="btn btn-info btn-block">Add Friend</button>
+                  <button type="submit" class="btn btn-info btn-block" (click)="addFriend()">Add Friend</button>
                 </div>
               </div>
             </form>
@@ -56,23 +59,11 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>Larry</td>
-                  <td>the Bird</td>
-                  <td>@twitter</td>
+                <tr *ngFor="let friend of friends; let i = index">
+                  <th scope="row">{{ i+1 }}</th>
+                  <td>{{ friend.name }}</td>
+                  <td>{{ friend.email }}</td>
+                  <td>{{ friend.contact }}</td>
                 </tr>
               </tbody>
             </table>
