--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
             </div>
             <hr>
             <div class="py-3 text-center">
-              <img src="../../assets/me.JPG" width="500px">
+              <img src="../../assets/me2.jpg" width="500px">
             </div>
             <div class="form-group">
               <label for="Username">Username</label>
