--- a/src/app/friends/friends.component.html
+++ b/src/app/friends/friends.component.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+
 <body class="bg-secondary">
-  <div class="container h-100">
+  <div class="container">
     <div class="row h-100 justify-content-center align-items-center">
       <div class="col-12 mx-0 p-3">
         <div class="card">
@@ -73,3 +83,5 @@
     </div>
   </div>
 </body>
+
+</html>
