--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,23 +5,22 @@
         <div class="card">
           <div class="card-body">
             <div class="text-center">
-              <h3>Hello Kisanak</h3>
+              <h3>Hello Bro!</h3>
             </div>
             <hr>
             <div class="py-3 text-center">
               <img src="../../assets/me2.jpg" width="500px">
             </div>
-            <div class="form-group">
-              <label for="Username">Username</label>
-              <input type="text" class="form-control" name="username" id="username" placeholder="Masukkan username..">
-            </div>
-            <div class="form-group">
-              <label for="Password">Password</label>
-              <input type="password" class="form-control" name="password" id="password"
-                placeholder="Masukkan password..">
-            </div>
-            <input type="submit" class="btn btn-info btn-block
-            " value="Login">
+            <form *ngIf="!authService.isLoggedIn()" class="form-signin" #f="ngForm" (ngSubmit)="signIn(f.value)">
+              <div *ngIf="invalidLogin" class="alert alert-danger">Username atau password anda salah!</div>
+              <label for="inputUsername" class="sr-only">Username</label>
+              <input type="text" id="inputUsername" name="username" ngModel class="form-control" placeholder="Username"
+                required autofocus>
+              <label for="inputPassword" class="sr-only">Password</label>
+              <input type="password" id="inputPassword" name="password" ngModel class="form-control"
+                placeholder="Password" required>
+              <button class="btn btn-info btn-block mt-3" type="submit">Login</button>
+            </form>
           </div>
         </div>
       </div>
