--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Home</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="authService.isLoggedIn()">
         <a class="nav-link" href="/friends">Friends</a>
       </li>
       <li class="nav-item">
@@ -18,7 +18,8 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <button class="btn btn-danger my-2 my-sm-0">Logout</button>
+      <button *ngIf="authService.isLoggedIn()" class="btn btn-danger my-2 my-sm-0"><a
+          (click)="authService.logout()">Logout</a></button>
     </form>
   </div>
 </nav>
