--- a/src/app/friends/friends.component.html
+++ b/src/app/friends/friends.component.html
@@ -20,21 +20,21 @@
             <hr>
             <form>
               <div class="form-group row">
-                <label for="inputNama" class="col-sm-2 col-form-label">Nama</label>
+                <label for="inputNama" class="col-sm-2 col-form-label font-weight-bold">Nama</label>
                 <div class="col-sm-10">
                   <input type="text" class="form-control" (input)="nama=$event.target.value"
                     placeholder="Masukkan nama..">
                 </div>
               </div>
               <div class="form-group row">
-                <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+                <label for="inputEmail" class="col-sm-2 col-form-label font-weight-bold">Email</label>
                 <div class="col-sm-10">
                   <input type="email" class="form-control" (input)="email=$event.target.value"
                     placeholder="Masukkan email..">
                 </div>
               </div>
               <div class="form-group row">
-                <label for="inputKontak" class="col-sm-2 col-form-label">Nomor Kontak</label>
+                <label for="inputKontak" class="col-sm-2 col-form-label font-weight-bold">Nomor Kontak</label>
                 <div class="col-sm-10">
                   <input type="number" class="form-control" (input)="contact=$event.target.value"
                     placeholder="Masukkan kontak..">
