tambah search bar

--- a/src/app/friends/friends.component.html
+++ b/src/app/friends/friends.component.html
@@ -72,6 +72,11 @@
             <div class="text-center">
               <h3>My Friends</h3>
             </div>
+            <!-- Search form -->
+            <div class="form-inline justify-content-center align-items-center">
+              <input class="form-control form-control-sm mt-3 w-25" type="text" placeholder="Search"
+                aria-label="Search">
+            </div>
             <br>
             <table class="table table-striped">
               <thead>
