--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,11 +5,11 @@
         <div class="card">
           <div class="card-body">
             <div class="text-center">
-              <h3>Hello Bro!</h3>
+              <h3>My Friend App</h3>
             </div>
             <hr>
             <div class="py-3 text-center">
-              <img src="../../assets/me2.jpg" width="500px">
+              <img src="../../assets/me.JPG" width="500px">
             </div>
             <form *ngIf="!authService.isLoggedIn()" class="form-signin" #f="ngForm" (ngSubmit)="signIn(f.value)">
               <div *ngIf="invalidLogin" class="alert alert-danger">Username atau password anda salah!</div>
