--- a/src/app/contact-me/contact-me.component.html
+++ b/src/app/contact-me/contact-me.component.html
@@ -61,29 +61,32 @@
             <div class="text-center">
               <h3>Your Data</h3>
             </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label font-weight-bold">Username</label>
-              <div class="col-md-9 col-form-label">
-                <div class="row" *ngFor="let contact of contacts">
-                  {{ contact.name }}
+            <div *ngFor="let contact of contacts">
+              <div class="form-group row">
+                <label class="col-md-3 col-form-label font-weight-bold">Username</label>
+                <div class="col-md-9 col-form-label">
+                  <div class="row">
+                    {{ contact.name }}
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label font-weight-bold">Email</label>
-              <div class="col-md-9 col-form-label">
-                <div class="row" *ngFor="let contact of contacts">
-                  {{ contact.email }}
+              <div class="form-group row">
+                <label class="col-md-3 col-form-label font-weight-bold">Email</label>
+                <div class="col-md-9 col-form-label">
+                  <div class="row">
+                    {{ contact.email }}
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="form-group row">
-              <label class="col-md-3 col-form-label font-weight-bold">Pesan</label>
-              <div class="col-md-9 col-form-label">
-                <div class="row" *ngFor="let contact of contacts">
-                  {{ contact.pesan }}
+              <div class="form-group row">
+                <label class="col-md-3 col-form-label font-weight-bold">Pesan</label>
+                <div class="col-md-9 col-form-label">
+                  <div class="row">
+                    {{ contact.pesan }}
+                  </div>
                 </div>
               </div>
+              <hr>
             </div>
           </div>
         </div>
