--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
             </div>
             <hr>
             <div class="py-3 text-center">
-              <img src="../../assets/greg.jpg" width="500px">
+              <img src="../../assets/greg.jpg" width="100%">
             </div>
             <form *ngIf="!authService.isLoggedIn()" class="form-signin" #f="ngForm" (ngSubmit)="signIn(f.value)">
               <div *ngIf="invalidLogin" class="alert alert-danger">Username atau password anda salah!</div>
